# untyped

./: README.md  untyped.cabal
src/Language/: LambdaCalculus.hs
src/Language/LambdaCalculus/: Context.hs  Evaluator.hs  Parser.hs  Pretty.hs
src/Language/LambdaCalculus/AST/: Term.hs
src/Language/LambdaCalculus/Parser/: Common.hs  Term.hs
src/Language/LambdaCalculus/Pretty/: Term.hs
test/tests/: t2.golden  t2.lc  t3.golden  t3.lc
untypedi/: Main.hs
