name:                untyped
version:             0.1.0.0
synopsis:            An untyped lambda calculus interpreter
description:         Please see README.md
homepage:            https://github.com/kseo/untyped#readme
license:             BSD3
license-file:        LICENSE
author:              Kwang Yul Seo
maintainer:          kwangyul.seo@gmail.com
copyright:           BSD3
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.LambdaCalculus
                       Language.LambdaCalculus.AST
                       Language.LambdaCalculus.AST.Term
                       Language.LambdaCalculus.Context
                       Language.LambdaCalculus.Evaluator
                       Language.LambdaCalculus.Parser
                       Language.LambdaCalculus.Parser.Common
                       Language.LambdaCalculus.Parser.Term
                       Language.LambdaCalculus.Pretty
                       Language.LambdaCalculus.Pretty.Term
  build-depends:       base >= 4.7 && < 5,
                       mtl >= 2.1.0 && < 2.3.0,
                       parsec -any,
                       pattern-arrows == 0.0.2
  default-language:    Haskell2010
  ghc-options: -Wall -O2

executable untypedi
  hs-source-dirs:      untypedi
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskeline == 0.7.*
                     , untyped
  default-language:    Haskell2010

test-suite untyped-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , untyped
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kseo/untyped
